<resources>
    <string name="app_name">MusicLoversStructure</string>
    <!-- Home  -->
    <string name="song_list">SONG LIST</string>
    <string name="add_song">ADD NEW SONG</string>

    <!--Player-->
    <string name="player_now_playing">Now Playing</string>
    <string name="player_play">Play Song</string>
    <string name="player_previous">Go to the previous song</string>
    <string name="player_next">Go to the next song</string>

    <string name="add_song_name">Song Name</string>
    <string name="add_song_artist_name">Artist Name</string>

    <!--Store names-->
    <string name="syncro">Search in the device </string>
    <string name="apple_music">Apple Store</string>
    <string name="spotify">Spotify</string>

    <!--Songs Info-->
    <string name="song_details_play_now">Play Now</string>
    <string name="song_details_album_description">Lorem Ipsum is adssad dsadas dsa dasd asd asd asd asd asdasfdsf agf </string>
    <!-- Description -->
    <string name="add_songs_description">Here you can add song to the local library from the store or from local directories</string>
    <string name="home_description">Here you can select the one of the two options , add songs or check the song list</string>
    <string name="songs_list_description">Here you can you song library</string>

</resources>
