<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#212121"
    android:gravity="center"
    android:paddingBottom="8dp"
    android:paddingTop="8dp"
    tools:context=".Player">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/image_placeholder_light" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/player_now_playing"
            android:textColor="#FFFFFF"
            android:layout_marginRight="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="Song by Artist"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:layout_marginRight="16dp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/player_previous_song"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/medial_control_previous"
        android:contentDescription="@string/player_previous" />

    <ImageView
        android:id="@+id/player_play_song"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@drawable/media_controls_play"
        android:contentDescription="@string/player_play"
        android:layout_marginLeft="8dp" />

    <ImageView
        android:id="@+id/player_next_song"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@drawable/media_controls_next"
        android:contentDescription="@string/player_next"
        android:layout_marginLeft="8dp" />
</LinearLayout>