<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="16dp">

        <TextView
            android:id="@+id/syncro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/syncro"
            style="@style/CategoryStyle"
            android:background="@color/colorBackgroundHome"
            android:textAllCaps="true" />

        <View
            android:layout_width="1dp"
            android:layout_height="6dp"
            android:background="@android:color/darker_gray">
        </View>

        <TextView
            android:id="@+id/store_apple_music"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/apple_music"
            style="@style/CategoryStyle"
            android:onClick="openStore"
            android:background="@color/colorBackgroundHome"
            android:textAllCaps="true"/>

        <View
            android:layout_width="1dp"
            android:layout_height="6dp"
            android:background="@android:color/darker_gray">
        </View>

        <TextView
            android:id="@+id/spotify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/spotify"
            style="@style/CategoryStyle"
            android:onClick="openStore"
            android:background="@color/colorBackgroundHome"
            android:textAllCaps="true"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom">

        <ListView
            android:id="@+id/add_song_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.48"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context="com.example.android.musicloversstructure.AddSong" />

        <include layout="@layout/player" />
    </LinearLayout>

</RelativeLayout>
